Ajout title et alt aux images

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css" >
-    <title>Document</title>
+    <title>Booki</title>
 </head>
 <body>
     <!-- HEADER -->
     <header>
         <div id="logo">
-            <img src="images/logo/Booki@3x.png" class="logo-booki"/>
+            <img src="images/logo/Booki@3x.png" alt="logo-booki" class="logo-booki"/>
         </div>
         <nav>
             <ul id="menu">
@@ -27,7 +27,7 @@
     <section id="hero">
         <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
         <p>En plein centre ville ou en pleine nature</p>
-        <form action="" class="recherche">
+        <form action="#" class="recherche">
             <i class="fas fa-map-marker-alt"></i>
             <input class="form-marseille" type="text" value="Marseille, France">
             <input class="button-r" type="button" value="Rechercher" >
@@ -69,7 +69,7 @@
             <h2>Hébergements à Marseille</h2>
             <ul id="hebergement-marseille">
                 <a href="#" class="card-lien">
-                <li class="card"><img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" class="card-image" />
+                <li class="card"><img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="la-cannebiere" class="card-image" />
                     <div class="card-def">
 
                     <h3 class="card-title">Auberge La Cannebière</h3>
@@ -85,7 +85,7 @@
                 </li>
                 </a>
                 <a href="#" class="card-lien">
-                <li class="card"><img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" class="card-image"/>
+                <li class="card"><img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hotel-du-port" class="card-image"/>
                     <div class="card-def">
 
                     <h3 class="card-title">Hôtel du port</h3>
@@ -101,7 +101,7 @@
                 </li>
                 </a>
                 <a href="#" class="card-lien">
-                <li class="card"><img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" class="card-image"/>
+                <li class="card"><img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="les-mouettes" class="card-image"/>
                     <div class="card-def">
 
                     <h3 class="card-title">Hôtel Les mouettes</h3>
@@ -117,7 +117,7 @@
                 </li>
                 </a>
                 <a href="#" class="card-lien">
-                <li class="card"><img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" class="card-image"/>
+                <li class="card"><img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hotel-de-la-mer" class="card-image"/>
                     <div class="card-def">
 
                     <h3 class="card-title">Hôtel de la mer</h3>
@@ -133,7 +133,7 @@
                 </li>
                 </a>
                 <a href="#" class="card-lien">
-                <li class="card"><img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" class="card-image"/>
+                <li class="card"><img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="auberge-le-panier" class="card-image"/>
                     <div class="card-def">
                     <h3 class="card-title">Auberge Le Panier</h3>
                     <p class="card-price">Nuit à partir de <strong>23€</strong></p>
@@ -148,7 +148,7 @@
                 </li>
                 </a>
                 <a href="#" class="card-lien">
-                <li class="card"><img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" class="card-image"/>
+                <li class="card"><img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chez-amina" class="card-image"/>
                     <div class="card-def">
 
                     <h3 class="card-title">Hôtel chez Amina</h3>
@@ -176,7 +176,7 @@
                 <a href="#" class="pop-lien">
                 <li class="pop-card">
                     <div class="pop-img">
-                        <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"/>
+                        <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="le-soleil-du-matin"/>
                     </div>
                     <div class="pop-describe">
 
@@ -200,7 +200,7 @@
             <a href="#" class="pop-lien">
                 <li class="pop-card">
                     <div class="pop-img">
-                        <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"/>
+                        <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="au-coeur-de-l-eau"/>
                     </div>
                     <div class="pop-describe">
 
@@ -225,7 +225,7 @@
 
                 <li class="pop-card">
                     <div class="pop-img">
-                        <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"/>
+                        <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="tout-bleu-et-blanc"/>
                     </div>
 
                     <div class="pop-describe">
@@ -266,7 +266,7 @@
             <div class="column">
                 <article id="card2">
                     <a href="#">
-                    <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"/>
+                    <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort-de-pomegues"/>
                     <h3>Fort de Pomègues</h3>
                 </a>
 
@@ -274,7 +274,7 @@
                 <article id="card3">
                     <a href="#">
 
-                    <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"/>
+                    <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="iles-du-frioul"/>
                     <h3>Îles du frioul</h3>
                 </a>
 
@@ -284,7 +284,7 @@
                 <article id="card4">
                     <a href="#">
 
-                    <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"/>
+                    <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parc-national-des-calanques"/>
                     <h3>Parc National des calanques</h3>
                 </a>
 
@@ -294,7 +294,7 @@
                 <article id="card5">
                     <a href="#">
 
-                    <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"/>
+                    <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notre-dame-de-la-garde"/>
                     <h3>Notre-Dame-de-la-Garde</h3>
                 </a>
 
@@ -302,7 +302,7 @@
                 <article id="card6">
                     <a href="#">
 
-                    <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"/>
+                    <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parc-longchamp"/>
                     <h3>Parc Longchamp</h3>
                 </a>
 
