--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <!-- HEADER -->
     <header>
+        
         <div id="logo">
             <img src="images/logo/Booki@3x.png" alt="logo-booki" class="logo-booki"/>
         </div>
@@ -30,12 +31,12 @@
         <form action="#" class="recherche">
             <i class="fas fa-map-marker-alt"></i>
             <input class="form-marseille" type="text" value="Marseille, France">
-            <input class="button-r" type="button" value="Rechercher" >
+            <button type="submit" class="button-r"><i class="fas fa-search"></i><span>Rechercher</span></button>
         </form>
 
-        <div class="flex search">
+        <div class="search">
             <div class="titre-search">
-            <p>Filtres</p>
+            <h3>Filtres</h3>
             </div>
             <div class="filtre">
                 <i class="fas fa-money-bill-wave icon-filtre"></i>
