Ajout des media queries format tablette

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     <section id="activites">
         <h2>Activités à Marseille</h2>
         <div id="activites-marseille">
-            <div class="column">
+            <div class="column solo">
                 <article id="card1">
                     <a href="#">
                     <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux-port"/>
@@ -270,7 +270,7 @@
 
                 </article>
             </div>
-            <div class="column">
+            <div class="column duo">
                 <article id="card2">
                     <a href="#">
                     <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort-de-pomegues"/>
@@ -287,7 +287,7 @@
 
                 </article>
             </div>
-            <div class="column">
+            <div class="column solo">
                 <article id="card4">
                     <a href="#">
 
@@ -297,7 +297,7 @@
 
                 </article>
             </div>
-            <div class="column">
+            <div class="column duo">
                 <article id="card5">
                     <a href="#">
 
