Rectifications media queries

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <ul id="menu">
                 <li class="liste-menu"><a href="#heb-marseille">Hébergements</a></li>
-                <li class="liste-menu"><a href="#activites-marseille">Activités</a></li>
+                <li class="liste-menu"><a href="#activites">Activités</a></li>
             </ul>
         </nav>
     </header>
