Mise à jour nommage cohérent

--- a/index.html
+++ b/index.html
@@ -31,34 +31,34 @@
     <section id="hero">
         <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
         <p>En plein centre ville ou en pleine nature</p>
-        <form action="#" class="recherche">
+        <form action="#" class="search-bar">
             <i class="fas fa-map-marker-alt"></i>
             <input class="form-marseille" type="text" value="Marseille, France">
-            <button type="submit" class="button-r"><i class="fas fa-search"></i><span>Rechercher</span></button>
+            <button type="submit" class="btn-search"><i class="fas fa-search"></i><span>Rechercher</span></button>
         </form>
 
-        <div class="search">
-            <div class="titre-search">
+        <div class="filters">
+            <div class="title-filters">
             <h3>Filtres</h3>
             </div>
-            <div class="filtre">
+            <div class="filter">
                 <i class="fas fa-money-bill-wave icon-filtre"></i>
-                <span class="label-filtre">Economique</span>
+                <span class="label-filter">Economique</span>
             </div>
 
-            <div class="filtre">
+            <div class="filter">
                 <i class="fas fa-child icon-filtre"></i>
-                <span class="label-filtre">Familial</span>
+                <span class="label-filter">Familial</span>
             </div>
 
-            <div class="filtre">
+            <div class="filter">
                 <i class="fas fa-heart icon-filtre"></i>
-                <span class="label-filtre">Romantique</span>
+                <span class="label-filter">Romantique</span>
             </div>
 
-            <div class="filtre">
+            <div class="filter">
                 <i class="fas fa-dog icon-filtre"></i>
-                <span class="label-filtre">Animaux autorisés</span>
+                <span class="label-filter">Animaux autorisés</span>
             </div>
 
         </div>
@@ -68,10 +68,10 @@
         </div>    
     </section>
     <!-- HEBERGEMENTS A MARSEILLE -->
-    <section id="centrale">   
-    <div id="heb-marseille">
+    <section id="central">   
+    <div id="accomodation-list">
             <h2>Hébergements à Marseille</h2>
-            <div id="hebergement-marseille">
+            <div id="accomodation-cards">
                 <a href="#" class="card-lien">
                 <article class="card">
                     <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="la-cannebiere" class="card-image" />
@@ -261,9 +261,9 @@
         </aside>
     </section> 
     <!-- ACTIVITES -->
-    <section id="activites">
+    <section id="activities">
         <h2>Activités à Marseille</h2>
-        <div id="activites-marseille">
+        <div id="activities-marseille">
             <div class="column solo">
                 <article id="card1">
                     <a href="#">
@@ -324,7 +324,7 @@
     <!-- FOOTER-->
     <footer>
         <div id="footer">
-        <div id="a-propos">
+        <div>
             <h3>A propos</h3>
             <ul>
                 <li><a href="#">Fonctionnement du site</a></li>
@@ -332,7 +332,7 @@
                 <li><a href="#">Données et confidentialité</a></li>
             </ul>
         </div>
-        <div id="hebergements">
+        <div>
             <h3>Nos hébergements</h3>
 
             <ul>
@@ -340,7 +340,7 @@
                 <li><a href="#">Soumettre votre hôtel</a></li>
             </ul>
         </div>
-        <div id="assistance">
+        <div>
             <h3>Assistance</h3>
 
             <ul>
