--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </div>
         <nav>
             <ul id="menu">
-                <li class="liste-menu"><a href="#heb-marseille">Hébergements</a></li>
-                <li class="liste-menu"><a href="#activites">Activités</a></li>
+                <li class="liste-menu"><a href="#accomodation-list">Hébergements</a></li>
+                <li class="liste-menu"><a href="#activities">Activités</a></li>
             </ul>
         </nav>
     </header>
